force-app/main/default/objects/FACT_JDE_Install_Base__c/FACT_JDE_Install_Base__c.object-meta.xml
<CustomObject>
    <label>JDE Install Base</label>
    <nameField>
        <displayFormat>JDE-IB-{00000000}</displayFormat>
        <label>JDE Install Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>JDE Install Base</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>