force-app/main/default/objects/FACT_JDE_Install_Base__c/fields/FACT_ACN__c.field-meta.xml
<CustomField>
    <fullName>FACT_ACN__c</fullName>
    <description>FALANO</description>
    <inlineHelpText>FALANO</inlineHelpText>
    <label>ACN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>