force-app/main/default/objects/FACT_JDE_Install_Base__c/fields/FACT_Chain_ACN__c.field-meta.xml
<CustomField>
    <fullName>FACT_Chain_ACN__c</fullName>
    <description>ABAN82</description>
    <inlineHelpText>ABAN82</inlineHelpText>
    <label>Chain ACN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>