force-app/main/default/objects/FACT_JDE_Install_Base__c/fields/FACT_Serial_Number__c.field-meta.xml
<CustomField>
    <fullName>FACT_Serial_Number__c</fullName>
    <description>FAASID</description>
    <inlineHelpText>FAASID</inlineHelpText>
    <label>Serial Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>