force-app/main/default/objects/FACT_JDE_Install_Base__c/fields/FACT_Serial_Number_corrected__c.field-meta.xml
<CustomField>
    <fullName>FACT_Serial_Number_corrected__c</fullName>
    <formula>if(OR(LEFT(FACT_Serial_Number__c,1)==&quot;Z&quot;,LEFT(FACT_Serial_Number__c,1)==&quot;z&quot;),LEFT(FACT_Serial_Number__c,10),&#39;&#39;)</formula>
    <label>Serial Number #</label>
    <type>Text</type>
</CustomField>