force-app/main/default/objects/FACT_JDE_Install_Base__c/fields/FACT_Status__c.field-meta.xml
<CustomField>
    <fullName>FACT_Status__c</fullName>
    <description>FAEQST</description>
    <inlineHelpText>FAEQST</inlineHelpText>
    <label>Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>