force-app/main/default/objects/FACT_JDE_Install_Base__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>FACT_Serial_Number_ACN__c</columns>
    <columns>FACT_Serial_Number__c</columns>
    <columns>FACT_ACN_Corrected__c</columns>
    <columns>FACT_Chain_ACN_Corrected__c</columns>
    <columns>FACT_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>